Closed
Bug 413462
Opened 18 years ago
Closed 18 years ago
GTK print dialog has incorrect filename extension for Print to File
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: jg307, Assigned: ventnor.bugzilla)
Details
Attachments
(1 file)
|
1.22 KB,
patch
|
roc
:
review+
roc
:
superreview+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686 (x86_64); en-US; rv:1.9b3pre) Gecko/2008012104 Minefield/3.0b3pre
Build Identifier: Mozilla/5.0 (X11; U; Linux i686 (x86_64); en-US; rv:1.9b3pre) Gecko/2008012104 Minefield/3.0b3pre
Selecting Print to File the default filename is mozilla.ps, but the default output format is PDF. The filename extension should match the output format.
Reproducible: Always
Updated•18 years ago
|
Version: unspecified → Trunk
| Assignee | ||
Updated•18 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•18 years ago
|
Assignee: nobody → ventnor.bugzilla
Status: ASSIGNED → NEW
| Assignee | ||
Comment 1•18 years ago
|
||
This works.
Status: NEW → ASSIGNED
Attachment #301738 -
Flags: superreview?(roc)
Attachment #301738 -
Flags: review?(roc)
Changing the output format to match the file name doesn't seem like the right fix to this bug.
I think the file name in the dialog should change to match the currently selected output format.
In other words, when we first discover the current file format is PS or PDF, and every time that changes, if the new format is PS and the current file name ends in .pdf, change it to .ps, or if the new format is PDF and the current file name ends in .ps, change it to .pdf.
Comment on attachment 301738 [details] [diff] [review]
Patch
alright then
Attachment #301738 -
Flags: superreview?(roc)
Attachment #301738 -
Flags: superreview+
Attachment #301738 -
Flags: review?(roc)
Attachment #301738 -
Flags: review+
| Assignee | ||
Comment 5•18 years ago
|
||
Comment on attachment 301738 [details] [diff] [review]
Patch
For the record, we had a little chat on the side about this bug ;)
This is a trivial change to make print-to-file slightly less irritating.
Attachment #301738 -
Flags: approval1.9?
Comment 6•18 years ago
|
||
Comment on attachment 301738 [details] [diff] [review]
Patch
a1.9+=damons
Attachment #301738 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Updated•18 years ago
|
Keywords: checkin-needed
Comment 7•18 years ago
|
||
Checking in widget/src/gtk2/nsPrintSettingsGTK.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsPrintSettingsGTK.cpp,v <-- nsPrintSettingsGTK.cpp
new revision: 1.5; previous revision: 1.4
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
You need to log in
before you can comment on or make changes to this bug.
Description
•