Bug 413462 - "GTK print dialog has incorrect filename extension for Print to File" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=damons]